2000-11-24  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

      * FLIM-MK (compile-flim): Compile `flim-version-specific-modules'.
      (install-flim): Install `flim-version-specific-modules' to
      `FLIM_VERSION_SPECIFIC_DIR'.
      (compile-flim-package): Compile `flim-version-specific-modules'.
      (install-flim-package): Install `flim-version-specific-modules'.
  
      * FLIM-ELS (flim-modules): Add `mime-conf' instead of `mailcap'.
      (flim-version-specific-modules): New variable; specify `mailcap'.
  
      * FLIM-CFG (FLIM_VERSION_SPECIFIC_DIR): New variable.

      * mailcap.el: Completely rewrote to use mime-conf.el.
  
      * mime-conf.el: New file.

2000-11-26  Kenichi OKADA   <okada@opaopa.org>

	* SLIM: Version 1.14.4 released.
	* mime-def.el (mime-library-product): Up.
	* SLIM-VERSION: Added.

2000-11-22  Kenichi OKADA   <okada@opaopa.org>

	* smtp.el (smtp-primitive-starttls): Call `smtp-primitive-helo'
	after `starttls-negotiate'.

2000-11-20  Kenichi OKADA   <okada@opaopa.org>

	* sasl-digest.el (sasl-digest-md5-response): Fix typo.

2000-11-20  Kenichi OKADA   <okada@opaopa.org>

	* FLIM-ELS (flim-modules): Add `sasl-cram', `sasl-digest' , `qmtp'.
	Remove `digest-md5'.
	* sasl.el: sync up with flim-1_14.
	* smtp.el: sync up with flim-1_14.
	* qmtp.el: New file.
	* sasl-cram.el: New file.
	* sasl-digest.el: New file.
	* digest-md5.el: Delete.


2000-10-20  Kenichi OKADA   <okada@opaopa.org>

	* SLIM: Version 1.14.3 released.

2000-09-21  Kenichi OKADA   <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Cause an error if `smtp-notify-success'
	is not available.

2000-09-18  KUSANO Takayuki  <AE5T-KSN@asahi-net.or.jp>

	* smtp.el (smtp-via-smtp): Check `service extensions' for DSN.

2000-09-21  Kenichi OKADA <okada@opaopa.org>

	* mime-def.el (mime-library-product): Up.
	* SLIM-VERSION: Up.


2000-09-16  Kenichi OKADA   <okada@opaopa.org>

	* SLIM: Version 1.14.2 released.

2000-08-28  Yuuichi Teranishi  <teranisi@gohome.org>
